--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.13"
+structlog = "24.4.0"
 
 [build-system]
 requires = ["poetry-core"]
