--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,11 @@ python = "^3.13"
 structlog = "24.4.0"
 pygithub = "2.5.0"
 
+[tool.poetry.group.dev.dependencies]
+ruff = "0.8.4"
+vulture = "2.14"
+zizmor = "0.10.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
