--- a/.github/workflows/code-checks.yml
+++ b/.github/workflows/code-checks.yml
@@ -87,8 +87,8 @@ jobs:
         with:
           fetch-depth: 0
           persist-credentials: false
-      - name: Set up Just
-        uses: extractions/setup-just@v2
+      - name: Set up dependencies
+        uses: ./.github/actions/setup-dependencies
       - name: Check Justfile Format
         run: just format-check
 
@@ -118,12 +118,10 @@ jobs:
         with:
           fetch-depth: 0
           persist-credentials: false
-      - name: Install the latest version of uv
-        uses: astral-sh/setup-uv@v4.2.0
-        with:
-          version: "latest"
+      - name: Set up dependencies
+        uses: ./.github/actions/setup-dependencies
       - name: Run zizmor 🌈
-        run: uvx zizmor --format sarif . > results.sarif
+        run: poetry run zizmor --format sarif . > results.sarif
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Upload SARIF file
@@ -131,3 +129,39 @@ jobs:
         with:
           sarif_file: results.sarif
           category: zizmor
+
+  run-python-code-checks:
+    name: Run Python Code Checks
+    runs-on: ubuntu-latest
+    permissions:
+      statuses: write
+      security-events: write
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4.2.2
+        with:
+          fetch-depth: 0
+          persist-credentials: false
+      - name: Set up dependencies
+        uses: ./.github/actions/setup-dependencies
+      - name: Generate Ruff Sarif
+        run: uv run ruff check .
+        env:
+          RUFF_OUTPUT_FORMAT: "sarif"
+          RUFF_OUTPUT_FILE: "ruff-results.sarif"
+        continue-on-error: true
+      - name: Upload Ruff analysis results to GitHub
+        uses: github/codeql-action/upload-sarif@v3.28.0
+        with:
+          sarif_file: ruff-results.sarif
+          wait-for-processing: true
+      - name: Check Python Code Format (Ruff)
+        run: uv run ruff format --check .
+        env:
+          RUFF_OUTPUT_FORMAT: "github"
+      - name: Check Python Code Linting (Ruff)
+        run: uv run ruff check .
+        env:
+          RUFF_OUTPUT_FORMAT: "github"
+      - name: Check Python Code for Dead Code (Vulture)
+        run: uv run vulture .
