--- a/.github/workflows/code-checks.yml
+++ b/.github/workflows/code-checks.yml
@@ -195,3 +195,23 @@ jobs:
         with:
           name: repositories
           path: repositories.json
+
+  validate-schema:
+    name: Validate Schema
+    runs-on: ubuntu-latest
+    needs: run-local-action
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4.2.2
+        with:
+          fetch-depth: 0
+          persist-credentials: false
+      - name: Setup Dependencies
+        uses: ./.github/actions/setup-dependencies
+      - name: Download Artifact
+        uses: actions/download-artifact@v4.1.8
+        with:
+          name: repositories
+          path: tests/schema_validation
+      - name: Validate Schema
+        run: just validate-schema
