--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ structlog = "24.4.0"
 pygithub = "2.5.0"
 
 [tool.poetry.group.dev.dependencies]
+pytest = "^8.3.4"
+pytest-cov = "^6.0.0"
 ruff = "0.8.4"
 vulture = "2.14"
 zizmor = "0.10.0"
