--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,11 +66,10 @@ exclude = [
 dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 
 [tool.ruff.lint.per-file-ignores]
-"**test_*.py" = ["S101", "D101", "D102", "D103", "SLF001", "FBT001"]
+"**test_*.py" = ["S101", "D101", "D102", "D103", "SLF001", "FBT001", "PLR0913"]
 
 [tool.ruff.lint.pydocstyle]
 convention = "google"
 
 [tool.ruff.lint.isort]
 known-first-party = ["tests"]
-
