--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ dev = [
 package-mode = false
 
 [tool.poetry.requires-plugins]
-poetry-plugin-export = ">=1.8"
+poetry-plugin-export = "1.9.0"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
