--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,15 +5,16 @@ requires-python = ">=3.13"
 dependencies = [
   "structlog==24.4.0",
   "pygithub==2.5.0",
+  "GitPython==3.1.44",
 ]
 
 [project.optional-dependencies]
 dev = [
   "pytest==8.3.4",
   "pytest-cov==6.0.0",
-  "ruff==0.9.1",
+  "ruff==0.9.3",
   "vulture==2.14",
-  "zizmor==1.0.1",
+  "zizmor==1.2.2",
   "check-jsonschema==0.31.0",
 ]
 
@@ -21,7 +22,7 @@ dev = [
 package-mode = false
 
 [tool.poetry.requires-plugins]
-poetry-plugin-export = ">=1.8"
+poetry-plugin-export = "1.9.0"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
