--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,15 +6,16 @@ dependencies = [
   "structlog==24.4.0",
   "pygithub==2.5.0",
   "GitPython==3.1.44",
+  "requests==2.32.3",
 ]
 
 [project.optional-dependencies]
 dev = [
   "pytest==8.3.4",
   "pytest-cov==6.0.0",
-  "ruff==0.9.3",
+  "ruff==0.9.5",
   "vulture==2.14",
-  "zizmor==1.2.2",
+  "zizmor==1.3.0",
   "check-jsonschema==0.31.0",
 ]
 
