--- a/.github/workflows/code-checks.yml
+++ b/.github/workflows/code-checks.yml
@@ -76,13 +76,13 @@ jobs:
           fetch-depth: 0
           persist-credentials: false
       - name: Initialize CodeQL
-        uses: github/codeql-action/init@v3.28.5
+        uses: github/codeql-action/init@v3.28.10
         with:
           languages: ${{ matrix.language }}
           queries: security-and-quality
           config-file: .github/other-configurations/codeql-config.yml
       - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v3.28.5
+        uses: github/codeql-action/analyze@v3.28.10
 
   check-justfile-format:
     name: Check Justfile Format
@@ -127,11 +127,11 @@ jobs:
       - name: Set up dependencies
         uses: ./.github/actions/setup-dependencies
       - name: Run zizmor 🌈
-        run: poetry run zizmor --format sarif . > results.sarif
+        run: uv run zizmor --format sarif . > results.sarif
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Upload SARIF file
-        uses: github/codeql-action/upload-sarif@v3.28.5
+        uses: github/codeql-action/upload-sarif@v3.28.10
         with:
           sarif_file: results.sarif
           category: zizmor
@@ -157,12 +157,10 @@ jobs:
           RUFF_OUTPUT_FILE: "ruff-results.sarif"
         continue-on-error: true
       - name: Upload Ruff analysis results to GitHub
-        uses: github/codeql-action/upload-sarif@v3.28.5
+        uses: github/codeql-action/upload-sarif@v3.28.10
         with:
           sarif_file: ruff-results.sarif
           wait-for-processing: true
-      - name: Validates Pyproject
-        run: just pyproject-check
       - name: Check Python Code Format (Ruff)
         run: just ruff-format-check
         env:
