--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ dynamic = ["version"]
 requires-python = ">=3.13"
 dependencies = [
   "structlog==24.4.0",
-  "pygithub==2.5.0",
+  "pygithub==2.6.0",
   "GitPython==3.1.44",
   "requests==2.32.3",
 ]
@@ -13,21 +13,15 @@ dependencies = [
 dev = [
   "pytest==8.3.4",
   "pytest-cov==6.0.0",
-  "ruff==0.9.5",
+  "ruff==0.9.7",
   "vulture==2.14",
-  "zizmor==1.3.0",
+  "zizmor==1.3.1",
   "check-jsonschema==0.31.0",
 ]
 
-[tool.poetry]
-package-mode = false
-
-[tool.poetry.requires-plugins]
-poetry-plugin-export = "1.9.0"
-
-[build-system]
-requires = ["poetry-core>=2.0.0,<3.0.0"]
-build-backend = "poetry.core.masonry.api"
+[tool.uv]
+required-version = "0.6.2"
+package = false
 
 [tool.ruff]
 target-version = "py313"
