--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,8 +20,9 @@ dev = [
 ]
 
 [tool.uv]
-required-version = "0.7.20"
+required-version = "~=0.8.0"
 package = false
+override-dependencies = ["urllib3==2.5.0"]
 
 [tool.setuptools]
 py-modules = ["validator", "tests"]
