--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -18,9 +18,9 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
-      packages: write
-      attestations: write
-      id-token: write
+      packages: write # To upload the package to GitHub Packages
+      attestations: write # To upload the package attestation
+      id-token: write # To authenticate with the Container registry
     steps:
       - name: Checkout Repository
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
