--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -38,3 +38,21 @@ updates:
         update-types:
           - "patch"
           - "minor"
+
+  - package-ecosystem: "docker"
+    directory: "/"
+    commit-message:
+      prefix: "deps(docker)"
+    schedule:
+      interval: "cron"
+      cronjob: "30 7 * * *"
+      timezone: "Europe/London"
+    target-branch: "main"
+    groups:
+      docker:
+        applies-to: "version-updates"
+        patterns:
+          - "*"
+        update-types:
+          - "patch"
+          - "minor"
