--- a/.github/tool-configurations/labeller.yml
+++ b/.github/tool-configurations/labeller.yml
@@ -45,4 +45,4 @@ validator:
 git_hooks:
   - any:
       - changed-files:
-          - any-glob-to-any-file: ["githooks/**"]
+          - any-glob-to-any-file: [".pre-commit-config.yaml", "**/.pre-commit-hooks.yaml"]
